--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,42 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   "true": "foo"
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  activerecord:
+    models:
+      product: Product
+    attributes:
+      product:
+        title: Title
+        description: Description
+        price: Price
+        photo: Photo
+    errors:
+      models:
+        product:
+          attributes:
+            title:
+              blank: can't be blank
+            description:
+              blank: can't be blank
+            price:
+              blank: can't be blank
+  common: 
+    add: 'Create new product'
+    confirm_message: 'Are you sure?'
+    edit: 'Edit'
+    delete: 'Delete'
+    ver_todos: 'See all products'
+  products:
+    index:
+      title: 'Products'
+    show:
+    new:
+      title: 'Add product'
+    edit:
+      title: 'Edit product'      
+    create:
+      created: 'Product created succesfully'
+    update: 
+      updated: 'Product updated succesfully.'
+    destroy:
+      destroyed: 'Product deleted succesfully.'
+    
+ 
