filter by price

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -37,6 +37,8 @@ es:
     index:
       title: Productos
       all: Todos
+      min_price: Precio mínimo
+      max_price: Precio máximo
     show:
       edit: Editar
       delete: Eliminar
